[package]
name = "drwchess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sdl2]
    version = "0.35"
    default-features = false
    features = ["ttf", "image", "gfx", "mixer"]

[dependencies]
mysql = "*"
dotenv = "0.15.0"
chrono = "0.4"
